infra/rds.tf
data "aws_availability_zones" "available" {}

module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "6.6.0"

  name                 = "weather-vpc"
  cidr                 = "10.0.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
  enable_dns_hostnames = true
  enable_dns_support   = true
}

resource "aws_db_subnet_group" "weather-subnet" {
  name       = "weather-subnet"
  subnet_ids = module.vpc.public_subnets

  tags = {
    Name = "weather-subnet"
  }
}

resource "aws_db_instance" "weather-rds" {
  identifier             = "weather-rds"
  instance_class         = "db.t3.micro"
  allocated_storage      = 1
  engine                 = "postgres"
  engine_version         = "18.3"
  username               = "edu"
  password               = var.rds_db_password
  db_subnet_group_name   = aws_db_subnet_group.weather-subnet.name
  vpc_security_group_ids = [aws_security_group.rds.id]
  parameter_group_name   = aws_db_parameter_group.weather-pgroup.name
  publicly_accessible    = true
  skip_final_snapshot    = true
}

resource "aws_db_parameter_group" "weather-pgroup" {
  name   = "weather-pgroup"
  family = "postgres18"

  parameter {
    name  = "log_connections"
    value = "all"
  }
}
